--- a/MyApp/src/app/component/CUSTOMERS/customer-list/customer-list.component.html
+++ b/MyApp/src/app/component/CUSTOMERS/customer-list/customer-list.component.html
@@ -1,13 +1,18 @@
-<link href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round" rel="stylesheet">
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 <div class="container-fluid">
     <h3>List All Customer</h3>
     <div class="row">
+        <div class="col-md-8 offset-md-3 searchicon">
+         <div class="input-group form-group">   
         <input type="text" class="form-control"
-            placeholder="Start searching for a customer Name or Mobilenumber or Email" name="search"
+            placeholder="Start searching for a customer Name or Mobile number or Email" name="search"
             [(ngModel)]="u_email" autocomplete="off">
+            <div class="input-group-append">
+                <span class="input-group-text form-control">
+                    <i class="fa fa-search" aria-hidden="true"></i>
+                </span>
+            </div>
+            </div>
+            </div>
     </div>
     <table class="table">
         <thead>
