--- a/MyApp/src/app/component/CUSTOMERS/cust-raise-complaint/cust-raise-complaint.component.html
+++ b/MyApp/src/app/component/CUSTOMERS/cust-raise-complaint/cust-raise-complaint.component.html
@@ -5,28 +5,28 @@
 <div class="container">
     <div class="row" id="r1">
 
-        <div class="col-md-3 ">
+        <!-- <div class="col-md-3 ">
             <button class="btn btn-info" id="b1">
              <span class="lable">Complaint Status </span>
           </button>
-        </div>
-        <div class="col-md-3">
+        </div> -->
+        <div class="col-md-4 mx-auto">
             <button class="btn btn-primary" (click)="userCount()">
-            <span class="count"> {{openCount1}}</span><span><i class="fas fa-clipboard"></i> </span><br>
-            <span class="lable">Open</span>
-          </button>
+                <span class="count"> {{openCount1}}</span><span><i class="fas fa-clipboard"></i> </span><br>
+                <span class="lable">Open</span>
+            </button>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-4 mx-auto">
             <button class="btn btn-success" (click)="enggCount()">
-            <span class="count">{{closedCount1}}</span><span><i class="fas fa-clipboard"></i> </span><br>
-            <span class="lable">Close</span>
-          </button>
+                <span class="count">{{closedCount1}}</span><span><i class="fas fa-clipboard"></i> </span><br>
+                <span class="lable">Close</span>
+            </button>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-4 mx-auto">
             <button class="btn btn-warning">
-            <span class="count">{{pendingCount1}}</span><span><i class="fas fa-clipboard"></i> </span><br>
-            <span class="lable">Pending</span>
-          </button>
+                <span class="count">{{pendingCount1}}</span><span><i class="fas fa-clipboard"></i> </span><br>
+                <span class="lable">Pending</span>
+            </button>
         </div>
     </div>
 
@@ -41,11 +41,14 @@
 
                         <div class="form-group">
                             <label>Description<p class="p12">*</p></label>
-                            <input type="text" class="form-control" formControlName="name" placeholder="Enter Description" [ngClass]="{ 'is-invalid': submitted && f.name.errors?.invalid }">
+                            <input type="text" class="form-control" formControlName="name"
+                                placeholder="Enter Description"
+                                [ngClass]="{ 'is-invalid': submitted && f.name.errors?.invalid }">
                         </div>
                         <div class="validation-errors">
                             <ng-container *ngFor="let validation of validation_messages.name">
-                                <div class="error-message text-danger" *ngIf="formGroup.get('name').hasError(validation.type) && (formGroup.get('name').dirty || formGroup.get('name').touched)">
+                                <div class="error-message text-danger"
+                                    *ngIf="formGroup.get('name').hasError(validation.type) && (formGroup.get('name').dirty || formGroup.get('name').touched)">
                                     <span name="information-circle-outline"></span> {{ validation.message }}
                                 </div>
                             </ng-container>
@@ -55,13 +58,15 @@
                             </label>
                             <select class="form-control" formControlName="EngineerType" placeholder=" Choose Engineer">
                                 <option value="">Choose engg type</option>
-                                <option *ngFor="let engg of enggList; let i= index" value="{{engg.key}}" [selected]="i == 0">{{engg.name}}</option>
+                                <option *ngFor="let engg of enggList; let i= index" value="{{engg.key}}"
+                                    [selected]="i == 0">{{engg.name}}</option>
 
                             </select>
 
                             <div class="validation-errors">
                                 <ng-container *ngFor="let validation of validation_messages.EngineerType">
-                                    <div class="error-message text-danger" *ngIf="formGroup.get('EngineerType').hasError(validation.type) && (formGroup.get('EngineerType').dirty || formGroup.get('EngineerType').touched)">
+                                    <div class="error-message text-danger"
+                                        *ngIf="formGroup.get('EngineerType').hasError(validation.type) && (formGroup.get('EngineerType').dirty || formGroup.get('EngineerType').touched)">
                                         <span name="information-circle-outline"></span> {{ validation.message }}
                                     </div>
                                 </ng-container>
@@ -70,17 +75,22 @@
 
                         <div class="form-group">
                             <label>Problem Starting Date<p class="p12">*</p></label>
-                            <input type="text" class="form-control" formControlName="DateOfjoining" placeholder="MM/DD/YYYY" bsDatepicker [bsConfig]="{ isAnimated: true }" [maxDate]="maxDate" [ngClass]="{ 'is-invalid': submitted && f.DateOfjoining.errors?.invalid }">
+                            <input type="text" class="form-control" formControlName="DateOfjoining"
+                                placeholder="MM/DD/YYYY" bsDatepicker [bsConfig]="{ isAnimated: true }"
+                                [maxDate]="maxDate"
+                                [ngClass]="{ 'is-invalid': submitted && f.DateOfjoining.errors?.invalid }">
                         </div>
                         <div class="validation-errors">
                             <ng-container *ngFor="let validation of validation_messages.DateOfjoining">
-                                <div class="error-message text-danger" *ngIf="formGroup.get('DateOfjoining').hasError(validation.type) && (formGroup.get('DateOfjoining').dirty || formGroup.get('DateOfjoining').touched)">
+                                <div class="error-message text-danger"
+                                    *ngIf="formGroup.get('DateOfjoining').hasError(validation.type) && (formGroup.get('DateOfjoining').dirty || formGroup.get('DateOfjoining').touched)">
                                     <span name="information-circle-outline"></span> {{ validation.message }}
                                 </div>
                             </ng-container>
                         </div>
                         <div class="form-group">
-                            <button type="submit" class="btn btn-primary" id="Registerbutton" data-dismiss="modal" [disabled]="!formGroup.valid">
+                            <button type="submit" class="btn btn-primary" id="Registerbutton" data-dismiss="modal"
+                                [disabled]="!formGroup.valid">
                                 Register
                             </button>
                             <button type="reset" class="btn btn-secondary" id="ResetButton">
