--- a/MyApp/src/app/component/CUSTOMERS/cust-raise-complaint/cust-raise-complaint.component.html
+++ b/MyApp/src/app/component/CUSTOMERS/cust-raise-complaint/cust-raise-complaint.component.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <ngx-spinner [fullScreen]="true" type="ball-clip-rotate-multiple" size="medium">
 </ngx-spinner>
 
@@ -10,41 +11,48 @@
              <span class="lable">Complaint Status </span>
           </button>
         </div> -->
-        <div class="col-md-4 mx-auto">
-            <button class="btn btn-primary" (click)="userCount()">
-                <span class="count"> {{openCount1}}</span><span><i class="fas fa-clipboard"></i> </span><br>
-                <span class="lable">Open</span>
-            </button>
+        <div class="col-md-4 mx-auto" *ngIf="openCount1 > 0">
+            <div class="box">
+                <p class="label">Unassigned <span><i class="fas fa-clipboard" style="color:black; float:right"></i> </span></p>
+                <p class="count"> {{openCount1}}</p><br>
+            </div>
         </div>
-        <div class="col-md-4 mx-auto">
-            <button class="btn btn-success" (click)="enggCount()">
-                <span class="count">{{closedCount1}}</span><span><i class="fas fa-clipboard"></i> </span><br>
-                <span class="lable">Close</span>
-            </button>
+        <div class="col-md-4 mx-auto" *ngIf="openCount1 > 0">
+            <div class="box">
+                <p class="label">Closed <span><i class="fas fa-clipboard" style="color:black; float:right"></i> </span></p>
+                <p class="count"> {{closedCount1}}</p><br>
+            </div>
         </div>
-        <div class="col-md-4 mx-auto">
-            <button class="btn btn-warning">
-                <span class="count">{{pendingCount1}}</span><span><i class="fas fa-clipboard"></i> </span><br>
-                <span class="lable">Pending</span>
-            </button>
+        <div class="col-md-4 mx-auto" *ngIf="openCount1 > 0">
+            <div class="box">
+                <p class="label">Pending<span><i class="fas fa-clipboard" style="color:black; float:right"></i> </span></p>
+                <p class="count">{{pendingCount1}}</p><br>
+            </div>
         </div>
     </div>
+
+    <form class="searchbox" id="r1">
+        <input type="text" placeholder="How can we help?" name="search">
+        <button type="submit"><i class="fa fa-search"></i></button>
+    </form>
+    
 
     <div class="row">
         <div class="col-md-8 mx-auto">
             <div class="card">
                 <div class="card-header">
-                    <h3> Raise Complaint </h3>
+                    <h3> Raise Your Complain </h3>
                 </div>
                 <div class="card-body">
                     <form class="form" [formGroup]="formGroup" (ngSubmit)="onSubmit(fb)">
 
                         <div class="form-group">
                             <label>Description<p class="p12">*</p></label>
-                            <input type="text" class="form-control" formControlName="name"
+                            <textarea class="form-control" rows="4" formControlName="name"
                                 placeholder="Enter Description"
                                 [ngClass]="{ 'is-invalid': submitted && f.name.errors?.invalid }">
-                        </div>
+                            </textarea>
+                        
                         <div class="validation-errors">
                             <ng-container *ngFor="let validation of validation_messages.name">
                                 <div class="error-message text-danger"
@@ -53,9 +61,26 @@
                                 </div>
                             </ng-container>
                         </div>
+                        </div>
                         <div class="form-group">
-                            <label>Engineer Type<p class="p12">*</p>
-                            </label>
+                            <label>Priority<p class="p12">*</p></label>
+                            <select class="form-control" formControlName="priority" placeholder="Select Priority">
+                                <option value="">Select Priority</option>
+                                <option *ngFor="let priority of priorityList; let i= index" value="{{priority.key}}"
+                                    [selected]="i == 0">{{priority.name}}</option>
+                            </select>
+
+                            <div class="validation-errors">
+                                <ng-container *ngFor="let validation of validation_messages.priority">
+                                    <div class="error-message text-danger"
+                                        *ngIf="formGroup.get('priority').hasError(validation.type) && (formGroup.get('priority').dirty || formGroup.get('priority').touched)">
+                                        <span name="information-circle-outline"></span> {{ validation.message }}
+                                    </div>
+                                </ng-container>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label>Engineer Type<p class="p12">*</p></label>
                             <select class="form-control" formControlName="EngineerType" placeholder=" Choose Engineer">
                                 <option value="">Choose engg type</option>
                                 <option *ngFor="let engg of enggList; let i= index" value="{{engg.key}}"
@@ -79,7 +104,7 @@
                                 placeholder="MM/DD/YYYY" bsDatepicker [bsConfig]="{ isAnimated: true }"
                                 [maxDate]="maxDate"
                                 [ngClass]="{ 'is-invalid': submitted && f.DateOfjoining.errors?.invalid }">
-                        </div>
+                        
                         <div class="validation-errors">
                             <ng-container *ngFor="let validation of validation_messages.DateOfjoining">
                                 <div class="error-message text-danger"
@@ -87,6 +112,7 @@
                                     <span name="information-circle-outline"></span> {{ validation.message }}
                                 </div>
                             </ng-container>
+                        </div>
                         </div>
                         <div class="form-group">
                             <button type="submit" class="btn btn-primary" id="Registerbutton" data-dismiss="modal"
