--- a/MyApp/src/app/component/CUSTOMERS/cust-header/cust-header.component.html
+++ b/MyApp/src/app/component/CUSTOMERS/cust-header/cust-header.component.html
@@ -22,11 +22,10 @@
         <div class="collapse navbar-collapse float-right" id="ftco-nav">
             <ul class="navbar-nav ml-auto">
 
-                <li class="nav-item">
+                <li class="nav-item" (click)="ondisplay()">
                     <a href="#" class="notification">
                         <span>Notification</span>
-                        <i class="fas fa-bell">  <span class="badge">3</span></i>
-
+                        <i class="fas fa-bell"><span class="badge">1</span></i>
                     </a>
                 </li>
 
