--- a/MyApp/src/app/component/chart/chart.component.css
+++ b/MyApp/src/app/component/chart/chart.component.css
@@ -1,5 +1,4 @@
 .btn{
-  margin-top: 20px;
   border-radius: 5px;
   color: black;
   width: 100%;
@@ -36,18 +35,13 @@
   margin: 0px;
   font-size: 20px;
 }
-.row .form-control{
-  color: #555;
-	letter-spacing: 1px;
-	height: 37px;
-	padding: 2px 15px 2px 35px;
-  border-radius: 50px;
-  margin-top: 5px;
-}
 .row .form-control::placeholder{
   color: rgba(0, 0, 0, 0.7);
 	font-size: 14px;
 	text-transform: capitalize;
+}
+.col-md-3{
+  margin-top: 20px;
 }
 .col-md-2{
   margin-left: 20px;
@@ -56,22 +50,28 @@
   font-size: medium;
   text-align: center;
 }
+.col-md-4{
+  margin-top: 20px;
+}
 .col-md-8{
   margin-bottom: 5px;
   margin-top: 5px;
    width: 100%;
 }
+.complainttable{
+  margin-top: 30px;
+}
 .table-responsive{
   margin-top: 10px;
 }
 .lable{
-  font-weight: bold;  
+    font-weight: bold;
+    font-size: 20px;
+    margin-left: 80px; 
 }
 .count{
   font-size: 20px;}
-.mb-4{
-  margin-top: 25px;
-}
+
 .card-body{
   padding-top: 0px;
 }
@@ -83,4 +83,21 @@
 .modal-header .close{
   padding: none;
   margin: none;
+}
+.row .form-control{
+  color: #555;
+	letter-spacing: 1px;
+	height: 37px;
+  margin-top: 5px;
+}
+
+.fa-search{
+  color: white;
+  font-size: 20px;
+  margin-top: 0px;
+  float:none;
+}
+span.input-group-text{
+  background-color: royalblue;
+  align-items: center;
 }
