--- a/MyApp/src/app/component/chart/chart.component.html
+++ b/MyApp/src/app/component/chart/chart.component.html
@@ -10,27 +10,57 @@
       <div class="card-body">
       <div class="row">
       <div class="col-md-3 offset-md-3 ">
+        <span class="lable lable1">Users</span>
         <button class="btn btn-success" (click)="userCount()">
           <span class="count userCount"> {{userCount1}}</span><span><i class="fa fa-users" aria-hidden="true"></i></span><br>
-          <span class="lable lable1">Users</span>
         </button>
       </div>
       <div class="col-md-3">
+        <span class="lable">Engineers</span>
         <button class="btn btn-primary"  (click)="enggCount()">
           <span class="count">{{enggCount1}}</span><span><i class="fa fa-users" aria-hidden="true"></i></span><br>
-          <span class="lable">Engineers</span>
         </button>
       </div>
       <div class="col-md-3">
+        <span class="lable">Admin</span>
         <button class="btn btn-warning">
           <span class="count">{{adminCount1}}</span><span><i class="fa fa-users" aria-hidden="true"></i></span><br>
-          <span class="lable">Admin</span>
         </button>
       </div>
     </div>
     </div>
     </div>
   </div>
+  <div class=" col-lg-12 mb-4">    
+    <div class=" card ">
+      <div class="card-header">
+        <h3>Complaint Status</h3>
+      </div>
+      <div class="card-body">
+      <div class="row">
+      <div class="col-md-4 ">
+        <span class="lable lable1">Open Complaint</span>
+        <button class="btn btn-success" (click)="openComplaint()">
+          <span class="count userCount"> {{openCount1}}</span><span><i class="fas fa-clipboard" aria-hidden="true"></i></span><br>
+        </button>
+      </div>
+      <div class="col-md-4">
+        <span class="lable">Closed Complaint</span>
+        <button class="btn btn-danger"  (click)="closeComplaint()">
+          <span class="count">{{closedCount1}}</span><span><i class="fas fa-clipboard" aria-hidden="true"></i></span><br>
+        </button>
+      </div>
+      <div class="col-md-4">
+        <span class="lable">Pending Complaint</span>
+        <button class="btn btn-warning" (click)="pendingComplaint()">
+          <span class="count">{{pendingCount1}}</span><span><i class="fas fa-clipboard" aria-hidden="true"></i></span><br>
+        </button>
+      </div>
+    </div>
+    </div>
+    </div>
+  </div>
+
   <div class=" col-lg-12 ">    
         <div class="row">
       <div class="col-md-6">
@@ -53,45 +83,23 @@
 </div>
 </div>
 </div>
-<div class=" col-lg-12 mb-4">    
-  <div class=" card ">
-    <div class="card-header">
-      <h3>Complaint Status</h3>
-    </div>
-    <div class="card-body">
-    <div class="row">
-    <div class="col-md-4 ">
-      <button class="btn btn-success" (click)="openComplaint()">
-        <span class="count userCount"> {{openCount1}}</span><span><i class="fas fa-clipboard" aria-hidden="true"></i></span><br>
-        <span class="lable lable1">Open Complaint</span>
-      </button>
-    </div>
-    <div class="col-md-4">
-      <button class="btn btn-danger"  (click)="closeComplaint()">
-        <span class="count">{{closedCount1}}</span><span><i class="fas fa-clipboard" aria-hidden="true"></i></span><br>
-        <span class="lable">Closed Complaint</span>
-      </button>
-    </div>
-    <div class="col-md-4">
-      <button class="btn btn-warning" (click)="pendingComplaint()">
-        <span class="count">{{pendingCount1}}</span><span><i class="fas fa-clipboard" aria-hidden="true"></i></span><br>
-        <span class="lable">Pending Complaint</span>
-      </button>
-    </div>
-  </div>
-  </div>
-  </div>
-</div>
-      <div class="col-lg-12">
+      <div class="col-lg-12 complainttable">
      <div class="card">
       <div class="card-header"> 
         <div class="row row123 ">
           <div class='col-md-2'><b>Search</b> 
           </div>
           <div class='col-md-8'>
-              <input class="form-control"
-               type="text" name="search" [(ngModel)]="searchText" autocomplete="off" 
-               placeholder="Enter your complaint name or complaint status"/>
+              <div class="input-group form-group">   
+        <input type="text" class="form-control"
+            placeholder="Start searching for a customer Name or Mobile number or Email" name="search"
+            [(ngModel)]="searchText" autocomplete="off">
+            <div class="input-group-append">
+                <span class="input-group-text form-control">
+                    <i class="fa fa-search" aria-hidden="true"></i>
+                </span>
+            </div>
+            </div>
                </div>
             </div>
          </div>
