--- a/MyApp/src/app/component/header/header.component.css
+++ b/MyApp/src/app/component/header/header.component.css
@@ -96,7 +96,7 @@
       background-color: #32c4b1 !important;
   }
   
-  .fas .badge {
+  .badge-light {
       position: absolute;
       top: -10px;
       right: -10px;
@@ -105,19 +105,18 @@
       background-color: red;
       color: white;
   }
-  
   i {
       font-size: x-large;
   }
-  
   .loading {
       color: white;
   }
-  
+  .active {
+      background-color: #3e8e41;
+  } 
   .active {
       background-color: #3e8e41;
   }
-  
-  .active {
-      background-color: #3e8e41;
+  .toast{
+      border: 1px solid black;
   }
