updated the FA icons and notification count

--- a/MyApp/src/app/component/CUSTOMERS/cust-header/cust-header.component.html
+++ b/MyApp/src/app/component/CUSTOMERS/cust-header/cust-header.component.html
@@ -23,9 +23,9 @@
             <ul class="navbar-nav ml-auto">
 
                 <li class="nav-item" (click)="ondisplay()">
-                    <a href="#" class="notification">
+                    <a href="" class="notification">
                         <span>Notification</span>
-                        <i class="fas fa-bell"><span class="badge">1</span></i>
+                        <i class="fas fa-bell"><span class="badge">{{openCount1}}</span></i>
                     </a>
                 </li>
 
@@ -47,5 +47,6 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="oi oi-menu"></span> <b>Menu</b>
     </button>
+
 
 </nav>
