--- a/MyApp/src/app/component/CUSTOMERS/cust-raise-complaint/cust-raise-complaint.component.css
+++ b/MyApp/src/app/component/CUSTOMERS/cust-raise-complaint/cust-raise-complaint.component.css
@@ -101,7 +101,7 @@ textarea.ng-touched.ng-invalid {
 form.searchbox input[type=text] {
     padding: 10px;
     font-size: 17px;
-    border: 1px solid grey;
+    border: 1px solid #C8CBCC;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     float: left;
@@ -116,7 +116,7 @@ form.searchbox input[type=text] {
     background: #F5B041;
     color: white;
     font-size: 17px;
-    border: 1px solid grey;
+    border: 1px solid #F5B041;
     border-left: none;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
