--- a/MyApp/src/app/component/CUSTOMERS/cust-header/cust-header.component.html
+++ b/MyApp/src/app/component/CUSTOMERS/cust-header/cust-header.component.html
@@ -22,21 +22,21 @@
         <div class="collapse navbar-collapse float-right" id="ftco-nav">
             <ul class="navbar-nav ml-auto">
 
-                <li class="nav-item" (click)="ondisplay()">
-                    <a href="" class="notification">
+                <li class="nav-item">
+                    <a class="notification" routerLink="app-cust-notification" (click)="loader()">
                         <span>Notification</span>
                         <i class="fas fa-bell"><span class="badge">{{openCount1}}</span></i>
                     </a>
                 </li>
 
                 <li class="nav-item">
-                    <a href="#" class="Logout">
+                    <a class="Logout">
                         <span>Setting</span>
                         <i class="fas fa-cog"></i>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="Logout">
+                    <a class="Logout">
                         <span>Logout</span>
                         <i class="fas fa-sign-out-alt"></i>
                     </a>
