--- a/MyApp/src/app/component/header/header.component.html
+++ b/MyApp/src/app/component/header/header.component.html
@@ -41,7 +41,7 @@
                 <li class="nav-item">
                     <a href="#" class="notification">
                         <span>Notification</span>
-                        <i class="fas fa-bell">  <span class="badge">{{openCount1}}</span></i>
+                        <i class="fas fa-bell">  <span class="badge">3</span></i>
                     </a>
                 </li>
                 <li class="nav-item">
