--- a/MyApp/src/app/component/Reusable/Notification/notification/notification.component.html
+++ b/MyApp/src/app/component/Reusable/Notification/notification/notification.component.html
@@ -1,1 +1,22 @@
-<p>notification works!</p>
+<a  id="myHideBtn" class="notification" (click)="notification()">
+    <span>Notification</span>
+    <i class="fas fa-bell"><span class="badge">{{openCount1}}</span></i>
+</a>
+<div class="container"   >
+<div class="card"  id="toastmsg"  style="position: relative; min-height:auto">
+  <!-- <div class="card-body"> -->
+<div   class="toast fade"  *ngFor="let desc of Opencomplaint" 
+role="alert" aria-live="assertive" aria-atomic="true" data-autohide="false">
+<div class="toast-header" *ngIf="showMyContainer">
+     <strong class="mr-auto text-primary">{{desc.c_id}}</strong>
+     <small class="text-muted">{{desc.c_date|date:'dd/MM/yyyy'}}</small>
+     <button type="button" class="ml-2 mb-1 close" data-dismiss="toast">&times;</button>
+   </div>
+   <div class="toast-body" *ngIf="showMyContainer" >
+     {{desc.c_desc}}
+     <a href="#">Click here!</a>
+   </div>
+  </div>
+</div>
+</div>
+<!-- </div> -->
