--- a/MyApp/src/app/component/chart/chart.component.html
+++ b/MyApp/src/app/component/chart/chart.component.html
@@ -2,64 +2,50 @@
 
 <body>
   <div class="container">
-      <div class=" col-lg-12 mb-4">    
-    <div class=" card">
-      <div class="card-header">
-        <h3>Customer Status</h3>
+    <div class="card btnCard">
+    <div class="card-body">
+    <div class="row" id="r1">
+      <div class="col-md-4 mx-auto " *ngIf="userCount1 > 0">
+          <button class=" btn box" (click)="userCount()">
+              <p class="label">User <span><i class="fa fa-users"></i> </span></p>
+              <p class="count"> {{userCount1}}</p><br>
+          </button>
       </div>
-      <div class="card-body">
-      <div class="row">
-      <div class="col-md-3 offset-md-3 ">
-        <span class="lable lable1">Users</span>
-        <button class="btn btn-success" (click)="userCount()">
-          <span class="count userCount"> {{userCount1}}</span><span><i class="fa fa-users" aria-hidden="true"></i></span><br>
-        </button>
+      <div class="col-md-4 mx-auto" *ngIf="enggCount1 > 0">
+          <button class=" btn box" (click)="enggCount()">
+              <p class="label">Engineers <span><i class="fa fa-users"></i> </span></p>
+              <p class="count"> {{enggCount1}}</p><br>
+          </button>
       </div>
-      <div class="col-md-3">
-        <span class="lable">Engineers</span>
-        <button class="btn btn-primary"  (click)="enggCount()">
-          <span class="count">{{enggCount1}}</span><span><i class="fa fa-users" aria-hidden="true"></i></span><br>
-        </button>
+      <div class="col-md-4 mx-auto " *ngIf="adminCount1 > 0">
+          <button class=" btn box">
+              <p class="label">Admin<span><i class="fa fa-users"></i> </span></p>
+              <p class="count">{{adminCount1}}</p><br>
+          </button>
       </div>
-      <div class="col-md-3">
-        <span class="lable">Admin</span>
-        <button class="btn btn-warning">
-          <span class="count">{{adminCount1}}</span><span><i class="fa fa-users" aria-hidden="true"></i></span><br>
-        </button>
-      </div>
-    </div>
-    </div>
-    </div>
   </div>
-  <div class=" col-lg-12 mb-4">    
-    <div class=" card ">
-      <div class="card-header">
-        <h3>Complaint Status</h3>
-      </div>
-      <div class="card-body">
-      <div class="row">
-      <div class="col-md-4 ">
-        <span class="lable lable1">Open Complaint</span>
-        <button class="btn btn-success" (click)="openComplaint()">
-          <span class="count userCount"> {{openCount1}}</span><span><i class="fas fa-clipboard" aria-hidden="true"></i></span><br>
+  <div class="row" id="r1">
+    <div class="col-md-4 mx-auto" *ngIf="openCount1 > 0">
+        <button class=" btn box" (click)="openComplaint()">
+            <p class="label" >Unassigned <span><i class="fas fa-clipboard" ></i> </span></p>
+            <p class="count"> {{openCount1}}</p><br>
         </button>
-      </div>
-      <div class="col-md-4">
-        <span class="lable">Closed Complaint</span>
-        <button class="btn btn-danger"  (click)="closeComplaint()">
-          <span class="count">{{closedCount1}}</span><span><i class="fas fa-clipboard" aria-hidden="true"></i></span><br>
+    </div>
+    <div class="col-md-4 mx-auto" *ngIf="closedCount1 > 0">
+        <button class=" btn box" (click)="closeComplaint()">
+            <p class="label"  >Closed <span><i class="fas fa-clipboard"></i> </span></p>
+            <p class="count"> {{closedCount1}}</p><br>
         </button>
-      </div>
-      <div class="col-md-4">
-        <span class="lable">Pending Complaint</span>
-        <button class="btn btn-warning" (click)="pendingComplaint()">
-          <span class="count">{{pendingCount1}}</span><span><i class="fas fa-clipboard" aria-hidden="true"></i></span><br>
+    </div>
+    <div class="col-md-4 mx-auto" *ngIf="pendingCount1 > 0">
+        <button class=" btn box" (click)="pendingComplaint()">
+            <p class="label" >Pending<span><i class="fas fa-clipboard"></i> </span></p>
+            <p class="count">{{pendingCount1}}</p><br>
         </button>
-      </div>
     </div>
-    </div>
-    </div>
-  </div>
+</div>
+</div>
+</div>
 
   <div class=" col-lg-12 ">    
         <div class="row">
