--- a/MyApp/src/app/component/header/header.component.css
+++ b/MyApp/src/app/component/header/header.component.css
@@ -95,16 +95,19 @@
   .Logout:hover {
       background-color: #32c4b1 !important;
   }
-  
-  .badge-light {
-      position: absolute;
-      top: -10px;
-      right: -10px;
-      padding: 5px 10px;
-      border-radius: 50%;
-      background-color: red;
-      color: white;
+  #toastmsg{
+      margin-top: 10%;
+      /* float: right; */
   }
+  .fas .badge {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    padding: 5px 10px;
+    border-radius: 50%;
+    background-color: red;
+    color: white;
+}
   i {
       font-size: x-large;
   }
