--- a/MyApp/src/app/component/header/header.component.html
+++ b/MyApp/src/app/component/header/header.component.html
@@ -1,13 +1,9 @@
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
 <ngx-spinner [fullScreen]="true" type="ball-clip-rotate-multiple" size="medium">
 </ngx-spinner>
+
 <nav class="navbar navbar-expand-sm navbar-dark fixed-top row " id="topheader">
     <div class="col-md-8">
-
         <div class="collapse navbar-collapse float-left" id="ftco-nav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
@@ -44,12 +40,10 @@
         <div class="collapse navbar-collapse float-right" id="ftco-nav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <button type="button" (click)="notification()" id="myBtn" class="btn notification">
-                        Notifications <span class="badge badge-light">{{openCount1}}</span>
-                      </button>
+                    <app-notification>
+                    </app-notification>
                 </li>
                 <li class="nav-item">
-
                     <a href="#" class="Logout">
                         <span>Setting</span>
                         <i class="fas fa-cog"></i>
@@ -68,7 +62,7 @@
         <span class="oi oi-menu"></span> <b>Menu</b>
     </button>
 </nav>      
-               
+
 <div id="logoutModal" class="modal fade" role="dialog">
     <div class="modal-dialog modal-confirm">
         <div class="modal-content">
@@ -86,20 +80,8 @@
     </div>
 </div>
 
-<div class="toast">
-    <div class="toast-header">
-      Toast Header
-    </div>
-    <div class="toast-body">
-      Some text inside the toast body
-    </div>
-  </div>
 
-<script>
-    $(document).ready(function(){
-      $("#myBtn").click(function(){
-        $('.toast').toast('show');
-      });
-    });
-</script>
+
+<!-- Alert  -->
+               
     
