--- a/MyApp/src/app/component/Reusable/Notification/notification/notification.component.css
+++ b/MyApp/src/app/component/Reusable/Notification/notification/notification.component.css
@@ -1,6 +1,12 @@
 .container{
     position: absolute;
-}   
+} 
+.card{
+    overflow-y: scroll;
+    height:300px;
+    margin-top: 5px;
+    margin-right: 30px;
+}
   .fas {
       margin-left: 10px !important;
       margin-right: 10px !important;
