--- a/MyApp/src/app/component/Reusable/Notification/notification/notification.component.html
+++ b/MyApp/src/app/component/Reusable/Notification/notification/notification.component.html
@@ -2,21 +2,21 @@
     <span>Notification</span>
     <i class="fas fa-bell"><span class="badge">{{openCount1}}</span></i>
 </a>
-<div class="container"   >
+<div class="container" id="myDiv" [hidden]="showMyContainer"  >
 <div class="card"  id="toastmsg"  style="position: relative; min-height:auto">
-  <!-- <div class="card-body"> -->
+  <div class="card-body">
 <div   class="toast fade"  *ngFor="let desc of Opencomplaint" 
 role="alert" aria-live="assertive" aria-atomic="true" data-autohide="false">
-<div class="toast-header" *ngIf="showMyContainer">
+<div class="toast-header"  >
      <strong class="mr-auto text-primary">{{desc.c_id}}</strong>
      <small class="text-muted">{{desc.c_date|date:'dd/MM/yyyy'}}</small>
      <button type="button" class="ml-2 mb-1 close" data-dismiss="toast">&times;</button>
    </div>
-   <div class="toast-body" *ngIf="showMyContainer" >
+   <div class="toast-body"  >
      {{desc.c_desc}}
-     <a href="#">Click here!</a>
+     <a  (click)="carddissmiss()" routerLink="/home1/app-assign-complaint">Click here!</a>
    </div>
   </div>
 </div>
 </div>
-<!-- </div> -->
+</div>
