--- a/MyApp/src/app/component/CUSTOMERS/view-previous-complaint/view-previous-complaint.component.css
+++ b/MyApp/src/app/component/CUSTOMERS/view-previous-complaint/view-previous-complaint.component.css
@@ -12,3 +12,17 @@ thead {
 .container{
   margin-bottom: 30px !important;
 }
+.input {
+  width: 100%;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+button.clear:hover {
+  background-color: #FFB133;
+}
+.head {
+  text-align: center;
+  font-weight: bold;
+  font-size: inherit;
+  margin-bottom: 5px;
+}
