--- a/MyApp/src/app/component/assign-complaint/assign-complaint.component.css
+++ b/MyApp/src/app/component/assign-complaint/assign-complaint.component.css
@@ -12,3 +12,10 @@ thead {
 .container{
   margin-bottom: 30px !important;
 }
+.modal-content{
+  overflow-y: scroll;
+  height:500px;
+}
+.selected{
+  background-color:green;
+}
