--- a/MyApp/src/app/component/header/header.component.html
+++ b/MyApp/src/app/component/header/header.component.html
@@ -30,7 +30,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="dropdown04">
                         <a class="dropdown-item" routerLink="app-view-all-complaints" (click)="assign_complaint()">View Complaints</a>
-                        <a class="dropdown-item" routerLink="app-assign-complaint" (click)="assign_complaint()">Assign Complaints</a>
+                        <a class="dropdown-item" routerLink="app-assign-complaint/view/:c_id" (click)="assign_complaint()">Assign Complaints</a>
                     </div>
                 </li>
             </ul>
