--- a/MyApp/src/app/component/assign-complaint/assign-complaint.component.css
+++ b/MyApp/src/app/component/assign-complaint/assign-complaint.component.css
@@ -19,3 +19,8 @@ thead {
 .selected{
   background-color:green;
 }
+
+.table tr.active td {
+  background-color:#123456 !important;
+  color: white;
+}
